# llm-cli-v2

./: .gitignore  README.md  main.py  play.py  pyproject.toml  run.sh
src/: config.py  logger.py
src/core/: chat.py  models.py  search.py
src/frontend/app/: api.py
src/frontend/app/router/: __init__.py  search.py
src/tools/: search.py
src/utils/: rate_limiter.py
